# fast_api_demo

./: .gitignore  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 394f0c131b7a_added_user_table.py  e0b56b364dbb_first_migration.py
src/: config.py  dependencies.py  main.py
src/auth/: dependencies.py  models.py  router.py  schema.py  service.py  utils.py
src/books/: book_data.py  model.py  route.py  schema.py
src/db/: main.py  redis.py
src/models/: __init__.py  book.py
src/routers/: __init__.py  book_router.py
src/schemas/: __init__.py  book.py
src/services/: __init__.py  book_service.py
