[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Yuvraj Singh <yuvrajsingh2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
alembic = "^1.16.4"
passlib = "^1.7.4"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
